--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="/css/themes/white/style.css" rel="stylesheet" id="theme_link">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <script src="https://explorer.chimeraproject.io/config.js"></script>
+    <script src="http://explorer.chimeraproject.io/config.js"></script>
 	<style>
 
 	.container {
