--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><strong><img src="https://explorer.chimeraproject.io/favicon.ico" width="20px" height="20px"/> &nbsp;Chimera</strong></a>
+            <a class="navbar-brand" href="/"><strong><img src="http://explorer.chimeraproject.io/favicon.ico" width="20px" height="20px"/> &nbsp;Chimera</strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
@@ -393,29 +393,29 @@
 					<i class="fa fa-language" aria-hidden="true"></i> Lang <span class="caret"></span></a>
 					<ul id="tools-menu" class="dropdown-menu">
 
-<li><a class="hot_link" href="https://explorer.chimeraproject.io">English</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/ar">Arabic (عربى )</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/zh">Chinese (中文)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/fr">French (Français)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/de">German (Deutsch)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/gr">Greek (ελληνικά)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/he">Hebrew (עברי)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/hi">Hindi (हदी)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/it">Italian (Italiano)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/ja">Japanese (日本人)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/ko">Korean (한국어)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/hu">Magyar (Hungarian)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/fa">Persian (فارسی )</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/pl">Polish (Polski)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/br">Portuguese (Português)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/ro">Romanian (Rumuński)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/ru">Russian (Русский)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/sr">Serbian (Српски)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/es">Spanish (Español)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/tr">Turkish (Türk)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/uk">Ukrainian (Українська)</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/pk">Urdu (اکستان )</a></li>
-<li><a class="hot_link" href="https://explorer.chimeraproject.io/vn">Vietnamese (Việt Nam)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io">English</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/ar">Arabic (عربى )</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/zh">Chinese (中文)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/fr">French (Français)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/de">German (Deutsch)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/gr">Greek (ελληνικά)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/he">Hebrew (עברי)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/hi">Hindi (हदी)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/it">Italian (Italiano)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/ja">Japanese (日本人)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/ko">Korean (한국어)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/hu">Magyar (Hungarian)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/fa">Persian (فارسی )</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/pl">Polish (Polski)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/br">Portuguese (Português)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/ro">Romanian (Rumuński)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/ru">Russian (Русский)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/sr">Serbian (Српски)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/es">Spanish (Español)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/tr">Turkish (Türk)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/uk">Ukrainian (Українська)</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/pk">Urdu (اکستان )</a></li>
+<li><a class="hot_link" href="http://explorer.chimeraproject.io/vn">Vietnamese (Việt Nam)</a></li>
 					</ul>
 				</li>
 
@@ -608,7 +608,7 @@ $('#txt_search').keyup(function(e){
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<p>
                     <small>
-                        &copy; 2019 <strong>Qwertycoin</strong>.org
+                        &copy; 2020 <strong>Chimera Project</strong>.org
                     </small>
                 </p>
 
@@ -618,7 +618,7 @@ $('#txt_search').keyup(function(e){
                     <li><a href="https://chimeraproject.io/#wallet">Download Desktop Wallet</a></li>
                     <li><a href="https://chimeraproject.io/#wallet">Download Classic Wallet</a></li>
                     <li><a href="https://webwallet.chimeraproject.io/"><strong>Chimera Web Wallet</strong></a></li>
-                    <li><a href="https://explorer.chimeraproject.io/#paperwallet">Create Paperwallet</a></li>
+                    <li><a href="http://explorer.chimeraproject.io/#paperwallet">Create Paperwallet</a></li>
                 </ul>
 
 			</div>
