--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><strong><img src="http://explorer.chimeraproject.io/favicon.ico" width="20px" height="20px"/> &nbsp;Chimera</strong></a>
+            <a class="navbar-brand" href="/"><strong><img src="http://explorer.chimeraproject.io/icon.png" width="20px" height="20px"/> &nbsp;Chimera</strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
