--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-	<link rel="shortcut icon" href="https://cdn.qwertycoin.org/images/icons/favicons/fav_explorer.png">
-    <link rel="icon" type="image/icon" href="https://cdn.qwertycoin.org/images/icons/favicons/fav_explorer.png" >
+	<link rel="shortcut icon" href="http://explorer.chimeraproject.io/icon.png">
+    <link rel="icon" type="image/icon" href="http://explorer.chimeraproject.io/icon.png" >
     <title>Chimera | Block Explorer - [CMRA]</title>
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
